--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "moviegame",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://harrison-b.github.io/moviegame",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
